# PocketCenter/FaceBodyFeatureService/internal/handlers/handler.go
@@ -10,10 +10,14 @@ import (
 
 type FeatureHandler struct {
 	broadcastService *services.BroadcastService
+	userAuthAddress  string
 }
 
-func NewFeatureHandler(broadcastService *services.BroadcastService) *FeatureHandler {
-	return &FeatureHandler{broadcastService: broadcastService}
+func NewFeatureHandler(broadcastService *services.BroadcastService, userAuthAddress string) *FeatureHandler {
+	return &FeatureHandler{
+		broadcastService: broadcastService,
+		userAuthAddress:  userAuthAddress,
+	}
 }
 
 type VersionResponse struct {
@@ -29,14 +33,28 @@ func (f *FeatureHandler) HandleVersion(w http.ResponseWriter, r *http.Request) {
 }
 
 func (f *FeatureHandler) HandleFaceTracking(w http.ResponseWriter, r *http.Request) {
+	token := r.Header.Get("Authentication")
+	session := r.Header.Get("SessionId")
+	ok, err := f.validateToken(token)
+	if err != nil {
+		log.Println(err)
+		http.Error(w, "Error when try to validate", http.StatusBadRequest)
+		return
+	}
+	if !ok {
+		log.Println("Validation not passed")
+		http.Error(w, "Validation not passed", http.StatusUnauthorized)
+		return
+	}
 	client, err := f.broadcastService.AddTracker(w, r)
 	if err != nil {
 		log.Println(err)
+		http.Error(w, "Can't add tracker", http.StatusBadRequest)
 		return
 	}
 
 	go func() {
-		defer f.broadcastService.RemoveClient(client)
+		defer f.broadcastService.RemoveTrackerClient(session)
 		for {
 			message, err := client.Read()
 			if err != nil {
@@ -50,12 +68,26 @@ func (f *FeatureHandler) HandleFaceTracking(w http.ResponseWriter, r *http.Reque
 				continue
 			}
 
-			f.broadcastService.Broadcast(message)
+			f.broadcastService.Broadcast(message, session)
 		}
 	}()
 }
 
 func (f *FeatureHandler) HandleReceiver(w http.ResponseWriter, r *http.Request) {
+	token := r.Header.Get("Authentication")
+	session := r.Header.Get("SessionId")
+	ok, err := f.validateToken(token)
+	if err != nil {
+		log.Println(err)
+		http.Error(w, "Error when try to validate", http.StatusBadRequest)
+		return
+	}
+	if !ok {
+		log.Println("Validation not passed")
+		http.Error(w, "Validation not passed", http.StatusUnauthorized)
+		return
+	}
+
 	client, err := f.broadcastService.AddComposer(w, r)
 	if err != nil {
 		log.Println(err)
@@ -63,7 +95,7 @@ func (f *FeatureHandler) HandleReceiver(w http.ResponseWriter, r *http.Request) 
 	}
 
 	go func() {
-		defer f.broadcastService.RemoveClient(client)
+		defer f.broadcastService.RemoveComposerClient(session)
 
 		for {
 			select {
@@ -80,4 +112,33 @@ func (f *FeatureHandler) HandleReceiver(w http.ResponseWriter, r *http.Request) 
 			}
 		}
 	}()
+}
+
+func (f *FeatureHandler) validateToken(token string) (bool, error) {
+	// Create a new request to the userauthsessionservice
+	req, err := http.NewRequest("POST", f.userAuthAddress+"/auth/validate", nil)
+	if err != nil {
+		log.Println(err)
+		return false, err
+	}
+
+	// Add the token to the request header
+	req.Header.Add("Authentication", token)
+
+	// Send the request
+	client := &http.Client{}
+	resp, err := client.Do(req)
+	if err != nil {
+		log.Println(err)
+		return false, err
+	}
+	defer resp.Body.Close()
+
+	// Check the response
+	if resp.StatusCode != http.StatusOK {
+		log.Println("Token validation failed")
+		return false, nil
+	}
+
+	return true, nil
 }
