# PocketCenter/UserAuthSessionService/internal/docs/swagger.yaml
@@ -47,9 +47,9 @@ paths:
       - application/json
       description: Find composer from waiting list
       parameters:
-      - description: Authorization
+      - description: Authentication
         in: header
-        name: Authorization
+        name: Authentication
         required: true
         type: string
       - description: Session Id
@@ -145,9 +145,9 @@ paths:
       - application/json
       description: Check if the JWT token is valid
       parameters:
-      - description: Authorization
+      - description: Authentication
         in: header
-        name: Authorization
+        name: Authentication
         required: true
         type: string
       produces:
